--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script src = "matrix.js"></script>
     <script src = "vector.js"></script>
     <script src = "linalg.js"></script>
+    <script src = "transformation.js"></script>
 </body>
 </html>
