--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 <body>
   
   <div>
-    <input type = "file" name="file" id = "file">
-    <textarea cols = "30" rows ="10"></textarea>
+   
+   
   </div>
-    
-    <script src = "script.js"></script>
-    <script src = "matrix.js"></script>
-    <script src = "vector.js"></script>
     <script src = "linalg.js"></script>
     <script src = "transformation.js"></script>
+    <script src = "matrix.js"></script>
+    <script src = "vector.js"></script>
+    
+    <script src = "shapes2d.js"></script>
+    <script src = "shapes3d.js"></script>
+    <script src = "p5.js"></script>
+    <script src = "p5.easycam.js"></script>
+    <script src = "main.js"></script>
+   
 </body>
 </html>
